Bug 206670 - after deleting an image the image before the deleted image is displayed/selected instead of the image after the deleted one
Summary: after deleting an image the image before the deleted image is displayed/selec...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Trash (other bugs)
Version First Reported In: 1.0.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-07 21:05 UTC by Johannes Tögel
Modified: 2017-08-14 08:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Tögel 2009-09-07 21:05:55 UTC
Version:           1.0.0-beta3 (using KDE 4.3.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

I noticed a (at least for me) very annoying behaviour if I delete images in the album view or the built-in preview:

If I delete an image, the image BEFORE the deleted image is displayed/selected instead of, as I would expect, the image AFTER the deleted image.

This is very, very annoying because I am used to view (and delete, if neccessary) my images from first one to last one, not in the other direction.


This behaviour should be changed so that the image after the deleted image is displayed/selected. This is also what almost every other program I know (including showFoto) is doing, so I think it's save to assume that this is the behaviour most users expect. 

Making it configurable and changing the behaviour would be the very best option in my opinion, but I would be fine too with just making it configurable or just changing the behaviour.
Comment 1 caulier.gilles 2009-09-07 21:08:35 UTC
Hum, try with beta4 or better with current code from svn (beta5)

Gilles Caulier
Comment 2 Johannes Tögel 2009-09-07 21:55:57 UTC
Tried beta4, unfortunately no change.

Is there some "easy way" to try it from svn? It takes a lot of time to compile all the libs and stuff...
Comment 3 Michael G. Hansen 2009-09-08 06:01:06 UTC
I can reproduce this at r1021090. The previous image is selected both in icon view and in preview mode.
Comment 4 Julien Narboux 2009-09-08 08:07:31 UTC
I can also reproduce this problem with rev1005586.
Comment 5 Marcel Wiesweg 2009-09-21 21:13:51 UTC
SVN commit 1026415 by mwiesweg:

Ensure that the next index is selected when removing.
Old code, taken from Qt, would default to previous index.

BUG: 206670

 M  +3 -1      NEWS  
 M  +6 -2      digikam/imagecategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1026415
Comment 6 Marcel Wiesweg 2009-09-26 21:40:34 UTC
*** Bug 208635 has been marked as a duplicate of this bug. ***
Comment 7 Johannes Wienke 2009-10-15 12:56:00 UTC
As far as I can see, this is only fixed for the album view, but not for the preview window. So I'm reopening this bug.
Comment 8 Andi Clemens 2009-10-15 13:32:45 UTC
SVN commit 1035557 by aclemens:

setCurrentIndex seems to work better in this case

BUG:206670

 M  +1 -1      imagecategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1035557