Ensure that the next index is selected when removing. Old code, taken from Qt, would default to previous index.

BUG: 206670

svn path=/trunk/extragear/graphics/digikam/; revision=1026415